To release the tag

--- a/pom.xml
+++ b/pom.xml
@@ -16,22 +16,20 @@
  ~ specific language governing permissions and limitations
  ~ under the License.
 	 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>org.wso2</groupId>
         <artifactId>wso2</artifactId>
         <version>1</version>
     </parent>
-
-    <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
-    <artifactId>org.wso2.carbon.extension.identity.authenticator.amazon</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <groupId>org.wso2.carbon.extension.identity.authenticator.outbound.amazon</groupId>
+    <artifactId>identity-outbound-auth-amazon</artifactId>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>WSO2 Carbon Extension - Amazon Pom</name>
     <url>http://wso2.org</url>
-
     <profiles>
         <profile>
             <id>default</id>
@@ -44,7 +42,6 @@
             </modules>
         </profile>
     </profiles>
-
     <dependencies>
         <dependency>
             <groupId>org.wso2.carbon.identity</groupId>
@@ -56,7 +53,7 @@
             <artifactId>org.wso2.carbon.logging</artifactId>
             <version>${commons-logging.version}</version>
         </dependency>
-        <dependency>   
+        <dependency>
             <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.application.common</artifactId>
             <version>${carbon.identity.version}</version>
@@ -137,14 +134,13 @@
             <version>${wso2.json}</version>
         </dependency>
     </dependencies>
-
     <scm>
         <connection>scm:git:https://github.com/wso2-extensions/identity-outbound-auth-amazon.git</connection>
         <url>https://github.com/wso2-extensions/identity-outbound-auth-amazon.git</url>
-        <developerConnection>scm:git:https://github.com/wso2-extensions/identity-outbound-auth-amazon.git</developerConnection>
+        <developerConnection>scm:git:https://github.com/wso2-extensions/identity-outbound-auth-amazon.git
+        </developerConnection>
         <tag>org.wso2.carbon.extension.identity.authenticator.amazon-1.0.0</tag>
     </scm>
-
     <build>
         <extensions>
             <extension>
@@ -189,7 +185,6 @@
                 </configuration>
             </plugin>
         </plugins>
-
         <pluginManagement>
             <plugins>
                 <plugin>
