--- a/component/pom.xml
+++ b/component/pom.xml
@@ -14,23 +14,18 @@
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
 -->
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
-        <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
-        <artifactId>org.wso2.carbon.extension.identity.authenticator.amazon</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+        <groupId>org.wso2.carbon.extension.identity.authenticator.outbound.amazon</groupId>
+        <artifactId>identity-outbound-auth-amazon</artifactId>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
-
-    <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
     <artifactId>org.wso2.carbon.extension.identity.authenticator.amazon.connector</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <name>WSO2 Carbon - Authenticator Library For Amazon</name>
     <url>http://wso2.org</url>
-
     <build>
         <pluginManagement>
             <plugins>
