--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -14,30 +14,26 @@
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
-        <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
-        <artifactId>org.wso2.carbon.extension.identity.authenticator.amazon</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+        <groupId>org.wso2.carbon.extension.identity.authenticator.outbound.amazon</groupId>
+        <artifactId>identity-outbound-auth-amazon</artifactId>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
-
-    <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>    
     <artifactId>org.wso2.carbon.extension.identity.authenticator.amazon.feature</artifactId>
     <packaging>pom</packaging>
     <name>WSO2 Carbon - identity Amazon OTP Feature</name>
     <url>http://wso2.org</url>
     <description>This feature contains extension feature for Amazon</description>
-
     <dependencies>
         <dependency>
-	    <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
-	    <artifactId>org.wso2.carbon.extension.identity.authenticator.amazon.connector</artifactId>
+            <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
+            <artifactId>org.wso2.carbon.extension.identity.authenticator.amazon.connector</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -61,7 +57,9 @@
                                 </properties>
                             </adviceFile>
                             <bundles>
-                                <bundleDef>org.wso2.carbon.extension.identity.authenticator:org.wso2.carbon.extension.identity.authenticator.amazon.connector</bundleDef>
+                                <bundleDef>
+                                    org.wso2.carbon.extension.identity.authenticator:org.wso2.carbon.extension.identity.authenticator.amazon.connector
+                                </bundleDef>
                             </bundles>
                         </configuration>
                     </execution>
