--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,7 @@
  ~ specific language governing permissions and limitations
  ~ under the License.
 	 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.wso2</groupId>
@@ -26,7 +25,7 @@
     </parent>
     <groupId>org.wso2.carbon.extension.identity.authenticator.outbound.amazon</groupId>
     <artifactId>identity-outbound-auth-amazon</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>pom</packaging>
     <name>WSO2 Carbon Extension - Amazon Pom</name>
     <url>http://wso2.org</url>
@@ -139,7 +138,7 @@
         <url>https://github.com/wso2-extensions/identity-outbound-auth-amazon.git</url>
         <developerConnection>scm:git:https://github.com/wso2-extensions/identity-outbound-auth-amazon.git
         </developerConnection>
-        <tag>org.wso2.carbon.extension.identity.authenticator.amazon-1.0.0</tag>
+        <tag>identity-outbound-auth-amazon-1.0.1</tag>
     </scm>
     <build>
         <extensions>
